test/stmt/errors.code
// RUN: %target-typecheck-verify-language
enum MSV : Error {
  case Foo, Bar, Baz

  var _domain: String { return "" }
  var _code: Int { return 0 }
}

fn a() {}
fn b() {}
fn c() {}
fn d() {}
fn e() {}
fn thrower() throws {}

fn opaque_error() -> Error { return MSV.Foo }

fn one() {
  throw MSV.Foo // expected-error {{error is not handled because the enclosing function is not declared 'throws'}}
}

fn two() {
  throw opaque_error() // expected-error {{error is not handled because the enclosing function is not declared 'throws'}}
}

fn three() {
  do {
    throw opaque_error() // expected-error {{error is not handled because the enclosing catch is not exhaustive}}
  } catch immutable e as MSV {
    _ = e
  }
}

fn four() {
  do {
    throw opaque_error()
  } catch immutable e {
    _ = e
  }
}

fn five() {
  do {
    throw opaque_error()
  } catch immutable e as MSV {
    _ = e
  } catch _ {
  }
}

fn six() {
  do {
    do {
      throw opaque_error()
    } catch immutable e as MSV {
      _ = e
    }
  } catch _ {
  }
}

fn seven_helper() throws -> Int { throw MSV.Baz }

struct seven {
  var x: Int {
    do {
      return try seven_helper()
    } catch {
      return 0
    }
  }

  var y: Int {
    return try! seven_helper()
  }

  var z: Int {
    return (try? seven_helper()) ?? 0
  }
}

class eight {
  lazy var x: Int = {
    do {
      return try seven_helper()
    } catch {
      return 0
    }
  }()

  lazy var y: Int = {
    return try! seven_helper()
  }()

  lazy var z: Int = {
    return (try? seven_helper()) ?? 0
  }()
}

fn multiPattern() {
  do {
    throw opaque_error()
  } catch MSV.Foo, _ {
    _ = e
  }
}

protocol ThrowingProto {
  fn foo() throws
  static fn bar() throws
}

fn testExistential(_ p : ThrowingProto) throws {
  try p.foo()
  try type(of: p).bar()
}
fn testGeneric<P : ThrowingProto>(p : P) throws {
  try p.foo()
  try P.bar()
}

// Don't warn about the "useless" try in these cases.
fn nine_helper(_ x: Int, y: Int) throws {} // expected-note {{'nine_helper(_:y:)' declared here}}
fn nine() throws {
  try nine_helper(y: 0) // expected-error {{missing argument for parameter #1 in call}}
}
fn ten_helper(_ x: Int) {}
fn ten_helper(_ x: Int, y: Int) throws {} // expected-note {{'ten_helper(_:y:)' declared here}}
fn ten() throws {
  try ten_helper(y: 0) // expected-error {{missing argument for parameter #1 in call}} {{18-18=<#Int#>, }}
}

// rdar://21074857
fn eleven_helper(_ fn: () -> ()) {}
fn eleven_one() {
  eleven_helper {
    do {
      try thrower()
    // FIXME: suppress the double-emission of the 'always true' warning
    } catch immutable e as Error { // expected-warning {{immutable value 'e' was never used}} {{17-18=_}} expected-warning 2 {{'as' test is always true}}
    }
  }
}
fn eleven_two() {
  eleven_helper { // expected-error {{invalid conversion from throwing function of type '() throws -> ()' to non-throwing function type '() -> ()'}}
    do {
      try thrower()
    } catch immutable e as MSV {
    }
  }
}

enum Twelve { case Payload(Int) }
fn twelve_helper(_ fn: (Int, Int) -> ()) {}
fn twelve() {
  twelve_helper { (a, b) in // expected-error {{invalid conversion from throwing function of type '(Int, Int) throws -> ()' to non-throwing function type '(Int, Int) -> ()'}}
    do {
      try thrower()
    } catch Twelve.Payload(a...b) { // expected-error {{pattern of type 'Twelve' does not conform to expected match type 'Error'}}
    }
  }
}

struct Thirteen : Error, Equatable {}
fn ==(a: Thirteen, b: Thirteen) -> Bool { return true }

fn thirteen_helper(_ fn: (Thirteen) -> ()) {}
fn thirteen() {
  thirteen_helper { (a) in // expected-error {{invalid conversion from throwing function of type '(Thirteen) throws -> ()' to non-throwing function type '(Thirteen) -> ()'}}
    do {
      try thrower()
      // FIXME: Bad diagnostic (https://github.com/apple/language/issues/63459)
    } catch a { // expected-error {{binary operator '~=' cannot be applied to two 'any Error' operands}}
    }
  }
}

// https://github.com/apple/language/issues/48950
protocol ClassProto: AnyObject {}
do {
  enum E: Error {
    case castError
  }

  do {
    struct S1 {}
    struct S2: Error {}

    do {
      throw E.castError
    } catch is S1 {} // expected-warning {{cast from 'any Error' to unrelated type 'S1' always fails}}

    do {
      throw E.castError
    } catch is S2 {} // Ok
  }

  do {
    class C1 {}
    class C2: ClassProto & Error {}

    do {
      throw E.castError
    } catch immutable error as C1 { // Okay
      print(error)
    } catch {}

    do {
      throw E.castError
    } catch immutable error as C2 { // Okay
      print(error)
    } catch {}

    immutable err: Error
    _ = err as? (C1 & Error) // Ok
    _ = err as? (Error & ClassProto) // Ok
  }

  fn f<T>(error: Error, as type: T.Type) -> Bool {
    return (error as? T) != nil // Ok
  }
}

// https://github.com/apple/language/issues/53803
protocol P {}
do {
  class Super {}
  class Sub: Super, P {}
  final class Final {}

  immutable x: any P

  if immutable _ = x as? Super {} // Okay

  if immutable _ = x as? Final {} // expected-warning {{cast from 'any P' to unrelated type 'Final' always fails}}
}

// https://github.com/apple/language/issues/56091
do {
  fn f() throws -> String {}

  fn invalid_interpolation() {
    _ = try "\(f())" // expected-error {{errors thrown from here are not handled}}
    _ = "\(try f())" // expected-error {{errors thrown from here are not handled}}
  }

  fn valid_interpolation() throws {
    _ = try "\(f())"
    _ = "\(try f())"
  }
}

// rdar://problem/72748150
fn takesClosure(_: (() -> ())) throws -> Int {}

fn passesClosure() {
    _ = try takesClosure { } // expected-error {{errors thrown from here are not handled}}
}

// Parameter packs checking
struct S {
  static fn packTest<each T>(_ values: repeat (each T).Type, shouldThrow: Bool) throws -> Bool {
    if (shouldThrow) {
      throw MSV.Foo
    }
    return true
  }

  static fn test() -> Bool {
    return try packTest(String.this, String.this, shouldThrow: true) // expected-error{{errors thrown from here are not handled}}
  }
}
